# hSIMD

./: README.md  simd-test.cabal
src/: Example.hs  Main.hs
src/SIMD/: SIMD.hs
