name:                simd-test
version:             0.1.0.0
synopsis:            Simple eDSL to write SIMD
description:         Please see README.md
homepage:            https://github.com/fgaray/hSIMD
license:             BSD3
license-file:        LICENSE
author:              Felipe Garay
maintainer:          felipe.garay@usach.cl
copyright:           2017 Felipe Garay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simd-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sbv,
                       QuickCheck,
                       free,
                       mtl,
                       containers
